--- a/assistant_bot.ipynb
+++ b/assistant_bot.ipynb
@@ -257,7 +257,7 @@
         "import pymongo\n",
         "\n",
         "# Connect to MongoDB\n",
-        "client = pymongo.MongoClient(\"mongodb+srv://lanaweiss02:whatever.ittakes@cluster0.loap7.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0\")\n",
+        "client = pymongo.MongoClient(\"mongodblink")\n",
         "db = client[\"purchase_history\"]\n",
         "collection = db[\"purchase\"]\n",
         "\n",
